# ai_robot_ranger

./: README.md  indoor_demo.txt  newnav.txt  readme.txt
ai_robot-master/: .gitignore
ai_robot-master/ai_robot_localization/: CMakeLists.txt  package.xml
ai_robot-master/ai_robot_localization/carto_configs/: carto_2d_loc_testbed04.lua  carto_2d_slam_testbed04.lua  carto_3d_loc_testbed04.lua  carto_3d_slam_testbed04.lua  carto_demo_2d.rviz  carto_demo_2d_2.rviz  carto_demo_3d.rviz  carto_hw_loc.lua  carto_hw_slam.lua
ai_robot-master/ai_robot_localization/launch/: carto_2d_loc.launch  carto_2d_slam.launch  carto_3d_loc.launch  carto_3d_loc_offline.launch  carto_3d_slam.launch  carto_3d_slam_offline.launch  carto_hw_loc.launch  carto_hw_loc_offline.launch  carto_hw_slam.launch  orbslam_loc.launch  orbslam_map.launch  orbslam_mapcompress.launch  orbslam_simloc.launch  orbslam_simmap.launch
ai_robot-master/ai_robot_localization/orbslam_configs/: zedstereo.yaml
ai_robot-master/ai_robot_localization/script/: start_loc.sh
ai_robot-master/ai_robot_localization/src/: init_carto_loc.py  posepub.py
ai_robot-master/ai_robot_msgs/: CMakeLists.txt  package.xml
ai_robot-master/ai_robot_msgs/msg/: MpTraj.msg  TopoMetric.msg
ai_robot-master/ai_robot_msgs/srv/: restart_nav.srv  set_destination.srv
ai_robot-master/ai_robot_navigation/: CMakeLists.txt  README.md  package.xml
ai_robot-master/ai_robot_navigation/PIDParameter/: controlParams (copy).yaml  controlParams.yaml  controlParams_vicon.yaml
ai_robot-master/ai_robot_navigation/include/: drawMatches.cpp  drawMatches.h  triangulate.cpp  triangulate.h
ai_robot-master/ai_robot_navigation/include/controller/: ADRC.cpp  ADRC.h  PIDController.cpp  pid_fuzzy.cpp  pid_fuzzy.h
ai_robot-master/ai_robot_navigation/launch/: brain.launch  carto_2d_localization.launch  gentopo.launch  globalnav.launch  globalnavsim.launch  hokuyo.launch  justmove.launch  lidar2d.launch  lidar3d.launch  obsavoid.launch  obsavoidsim.launch  obsavoidsim_visual.launch  orb.launch  posekf.launch  start.launch  test_findpath.launch
ai_robot-master/ai_robot_navigation/param/: params_oa_hokuyo.yaml  params_oa_quanergy.yaml  testfp.yaml
ai_robot-master/ai_robot_navigation/src/brain/: AIBrain.cpp  AIBrain.h  ARDrone.cpp  ARDrone.h  drone_object_ros.cpp  drone_object_ros.h  main.cpp  posControl.cpp  posControl.h  postrajectory.cpp  postrajectory.h
ai_robot-master/ai_robot_navigation/src/findpath/: aParamForKeyframeHandle.yaml  findpathsrm.cpp  findpathsrm.h  setDestinationClient.cpp  testfindpath.cpp
ai_robot-master/ai_robot_navigation/src/gennodemap/: CMakeLists.txt  removelinks.sh  run.sh  savemapfromcarto.sh
ai_robot-master/ai_robot_navigation/src/gennodemap/src/: Octree.hpp  aParamForKeyframeHandle.yaml  keyframehandle.cpp  keyframehandle.h  main.cpp  removeRedunLink.py  ros_main.cpp  save_mappoint_trajs.py
ai_robot-master/ai_robot_navigation/src/obstacle_avoid/: main.cpp  p3atObsAvoid.cpp  p3atObsAvoid.h
ai_robot-master/ai_robot_navigation/src/obstacle_avoid_for laser/: p3atObsAvoid.cpp  params.yaml
ai_robot-master/ai_robot_navigation/src/pointtopoint/: PointToPoint.cpp  PointToPoint.h  waypoints.txt
ai_robot-master/ai_robot_navigation/src/pos_ekf/: main.cpp  posconvert.py  pose_ekf.cpp  pose_ekf.h  vicon.cpp  vicon.h
ai_robot-master/ai_robot_navigation/src/record/: recordreal.sh  recordsim.sh  recordsimorb.sh  step_of_record
ai_robot-master/ai_robot_sensors/: CMakeLists.txt  README.md  package.xml
ai_robot-master/ai_robot_sensors/config/: sensors_diags.yaml
ai_robot-master/ai_robot_sensors/config/camera/: USB30W01.yaml  USB30W02M.yaml  USBFHD01M_1080p.yaml  USBFHD01M_480p.yaml  USBFHD01M_720p.yaml
ai_robot-master/ai_robot_sensors/config/gnss/: NEO-M8P-2-10.yaml
ai_robot-master/ai_robot_sensors/config/imu/: razor_hw.yaml  razor_no1.yaml  razor_no2.yaml  razor_no3.yaml
ai_robot-master/ai_robot_sensors/launch/: start_all.launch  start_carto.launch  start_carto2d.launch  start_carto3d_rtk.launch  start_hw.launch  start_orb.launch  start_seletest.launch  start_tof_imu.launch  start_vigl.launch  start_ym.launch
ai_robot-master/ai_robot_sensors/param/: hokuyo.yaml
ai_robot-master/ai_robot_sensors/rules/: AgileX-Scout.rules  ArduinoIMU.rules  Autolabor.rules  Joy-BTP2185.rules  RazorIMU9Dof01.rules  RazorIMU9Dof02.rules  RazorIMU9Dof03.rules  XsensIMU.rules  ZED1.rules  ublox-M8P.rules  um482.rules
ai_robot-master/ai_robot_sensors/urdf/: pioneer3at.urdf  testbed03.urdf  testbed04.urdf
ai_robot_clean/: CMakeLists.txt
ai_robot_nav_demo/: CMakeLists.txt  default.rviz  default1.rviz  mycar_clean.rviz  obsavoidsim_visual.rviz
ai_robot_nav_demo/include/: move_object.h
ai_robot_nav_demo/launch/: amcl.launch  brainnav.launch  brainnode.launch  loadmap.launch  moveslam.launch  nav_slam.launch  obs_avoid.launch  path.launch  slam_gmapping.launch  testloca.launch
ai_robot_nav_demo/map/: mymap.yaml  nav.pgm  nav.yaml  testmap.yaml
ai_robot_nav_demo/param/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
ai_robot_nav_demo/src/: Odom_exam.py  Odom_test.cpp  initialpose.py  mapbasetf.cpp  move_object.cpp
navigation/move_base/: CMakeLists.txt
navigation/move_base/include/executor/: chassis_executor.h
navigation/move_base/include/exemple_behavior/: goal_behavior.h
navigation/move_base/include/move_base/: AIBrain.h  PIDController.h  PointToPoint.h  ai_robot_ranger.h  move_base.h  posControl.h  postrajectory.h
navigation/move_base/include/obsavoid/: obs_avoid.h
navigation/move_base/src/: ADRC.cpp  AIBrain.cpp  ARDrone.cpp  ESO.cpp  PIDController.cpp  Pioneer3AT.cpp  ai_robot_ranger.cpp  assistMath.cpp  drone_object_ros.cpp  main.cpp  move_base.cpp  move_base_node.cpp  pid_fuzzy.cpp  posControl.cpp  postrajectory.cpp
navigation/move_base/src/multi_point_inspection/: multi_point_inspection.cpp
navigation/move_base/src/obsavoid/: obs_avoid.cpp
navigation/move_base/src/pointtopoint/: PointToPoint.cpp
(+39 files in other folders)
