<?xml version="1.0"?>

<package format="2">
  <name>ai_robot_msgs</name>
  <version>1.0.0</version>
  <description>
    ROS messages for the ai_robot package.
  </description>
  <maintainer email="icecreamxwy@sjtu.edu.cn">
    xwy
  </maintainer>
  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <build_depend>message_generation</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
</package>
